# app/Http/Controllers/TokenController.php
@@ -15,6 +15,23 @@ class TokenController extends Controller
     /**
      * Store a newly created resource in storage.
      *
+     * @OA\Post(
+     *     tags={"Token"},
+     *     path="/api/tokens",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(property="email", type="string", default=""),
+     *                 @OA\Property(property="password", type="string", default=""),
+     *             ),
+     *         ),
+     *     ),
+     *     @OA\Response(response=200, description="OK", @OA\JsonContent()),
+     *     @OA\Response(response=401, description="Unauthorized", @OA\JsonContent()),
+     *     @OA\Response(response=422, description="Unprocessable Content", @OA\JsonContent()),
+     * )
+     *
      * @param TokenStoreRequest $request
      * @return JsonResponse
      * @throws AuthenticationException
@@ -39,6 +56,14 @@ class TokenController extends Controller
 
     /**
      * Remove the specified resource from storage.
+     *
+     * @OA\Delete(
+     *     tags={"Token"},
+     *     path="/api/tokens",
+     *     security={{"sanctum":{}}},
+     *     @OA\Response(response=204, description="No Content", @OA\JsonContent()),
+     *     @OA\Response(response=401, description="Unauthorized", @OA\JsonContent()),
+     * )
      *
      * @param Request $request
      * @return JsonResponse
